@@ -1,27 +1,38 @@
 package com.example.magazin.service.serviceImpl;
 
+import com.example.magazin.dto.mappers.OrderMapper;
 import com.example.magazin.dto.mappers.ProductForOrderMapper;
 import com.example.magazin.dto.mappers.UserMapper;
 import com.example.magazin.dto.order.OrderDto;
 import com.example.magazin.dto.order.OrderForSave;
 import com.example.magazin.dto.product.ProductForOrderDto;
+import com.example.magazin.dto.productImageDto.ProductImageDto;
 import com.example.magazin.dto.review.ReviewDto;
+import com.example.magazin.entity.category.Category;
 import com.example.magazin.entity.order.Order;
 import com.example.magazin.entity.product.Product;
 import com.example.magazin.entity.review.Review;
 import com.example.magazin.entity.user.User;
 import com.example.magazin.exceptions.ResourceNotFoundException;
+import com.example.magazin.repository.category.CategoryRepository;
 import com.example.magazin.repository.order.OrderRepository;
 import com.example.magazin.repository.product.ProductRepository;
 import com.example.magazin.repository.user.UserRepository;
+import com.example.magazin.service.CategoryService;
 import com.example.magazin.service.OrderService;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,8 +41,10 @@ public class OrderServiceImpl implements OrderService {
     private OrderRepository orderRepository;
     private ProductRepository productRepository;
     private UserRepository userRepository;
+    private CategoryRepository categoryRepository;
     private ProductForOrderMapper productForOrderMapper;
     private UserMapper userMapper;
+    private OrderMapper orderMapper;
     @Override
     public OrderDto getOrderById(Integer id) {
         Order order;
@@ -71,6 +84,40 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
+    public List<OrderDto> getOrdersByUserEmail(String userEmail) {
+        List<Order> orders = orderRepository.findByUserEmail(userEmail);
+        return orders.stream()
+                .map(order -> OrderDto.builder()
+                        .id(order.getId())
+                        .total(order.getTotal())
+                        .products(order.getProducts().stream()
+                                .map(product -> productForOrderMapper.toDto(product))
+                                .toList())
+                        .user(userMapper.toDto(order.getUser()))
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<OrderDto> getOrderByDate(LocalDate startDate, LocalDate endDate) {
+        List<Order> orders = orderRepository.findAll();
+        return orders.stream()
+                .filter(order ->
+                        order.getDateTime().toLocalDate().isBefore(endDate)
+                                && order.getDateTime().toLocalDate().isAfter(startDate))
+                .map(order -> OrderDto.builder()
+                        .id(order.getId())
+                        .total(order.getTotal())
+                        .products(order.getProducts().stream()
+                                .map(product -> productForOrderMapper.toDto(product))
+                                .toList())
+                        .user(userMapper.toDto(order.getUser()))
+                        .build())
+                .collect(Collectors.toList());
+
+    }
+
+    @Override
     public List<OrderDto> getAllOrders(Sort sort) {
         List<Order> orders = orderRepository.findAll(sort);
         return orders.stream()
@@ -101,35 +148,57 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    public OrderDto saveOrder(OrderForSave orderForSave) {
-        List<Integer> productIds = orderForSave.getProducts().stream()
-                .map(ProductForOrderDto::getId)
+    @Transactional
+    public OrderDto saveOrder(Set<ProductForOrderDto> productsForOrderDtoList, String userEmail, BigDecimal total) {
+        User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        List<Product> products = productsForOrderDtoList.stream()
+                .map(productForOrderDtoList -> {
+                    return productRepository.findById(productForOrderDtoList.getId())
+                                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+                })
                 .toList();
-        User user;
-        try {
-            user = userRepository.findById(orderForSave.getUserId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Review not found"));
-        }catch (ResourceNotFoundException e){
-            e.printStackTrace();
-            return null;
-        }
-        List<Product> products = productRepository.findAllById(productIds);
+
+        products.forEach(product ->
+                productRepository.updateProductAmountById(product.getId(), product.getAmount()));
+        List<Product> productsChangeAmount = new ArrayList<>();
+
+        productsForOrderDtoList.forEach(productForOrderDto ->{
+            for (Product product : products) {
+                if (product.getId().equals(productForOrderDto.getId())) {
+                    product.setAmount(productForOrderDto.getAmount());
+                    productsChangeAmount.add(product);
+                }
+            }
+        });
+
         Order order = Order.builder()
-                .id(orderForSave.getId())
-                .dateTime(orderForSave.getDateTime())
-                .total(orderForSave.getTotal())
-                .products(products)
+                .products(productsChangeAmount)
                 .user(user)
+                .dateTime(LocalDateTime.now())
+                .total(total)
                 .build();
+
         Order saveOrder = orderRepository.save(order);
 
         return OrderDto.builder()
                 .id(saveOrder.getId())
                 .total(saveOrder.getTotal())
-                .products(saveOrder.getProducts().stream()
-                        .map(product -> productForOrderMapper.toDto(product))
-                        .toList())
-                .user(userMapper.toDto(saveOrder.getUser()))
+                .user(userMapper.toDto(user))
+                .products(saveOrder.getProducts().stream().map(product -> ProductForOrderDto.builder()
+                                .id(product.getId())
+                                .name(product.getName())
+                                .price(product.getPrice())
+                                .productImages(product.getProductImages().stream()
+                                        .map(productImage -> ProductImageDto.builder()
+                                                .src(productImage.getSrc())
+                                                .filePath(productImage.getFilePath())
+                                                .build())
+                                        .collect(Collectors.toList()))
+                                .amount(product.getAmount())
+                                .build()).collect(Collectors.toList()))
+                .dateTime(saveOrder.getDateTime())
                 .build();
     }
 
